feat: modulos do certificado adicionados

--- a/src/components/alunos/formAddCertificado.html
+++ b/src/components/alunos/formAddCertificado.html
@@ -30,8 +30,8 @@
                 <input id='curso_carga_horaria' required="true" />
             </div>
             <div>
-                <label for="curso_modulos">Módulos:</label>
-                <textarea id='curso_modulos' required="true"></textarea>
+                <label for="curso_modulos_certificado">M. Certificado:</label>
+                <textarea id='curso_modulos_certificado' required="true"></textarea>
             </div>
             <div id="div_datas">
                
