--- a/src/components/cursosInfo/viewTableCursosInfo.html
+++ b/src/components/cursosInfo/viewTableCursosInfo.html
@@ -5,6 +5,7 @@
             <th>Curso</th>
             <th>Categoria</th>
             <th>Módulos</th>
+            <th>M. Certificado</th>
             <th>Parc.</th>
             <th>Durac.</th>
             <th>C. H.</th>
@@ -14,6 +15,7 @@
             <th></th>
         </thead>
         <tbody id='tbody'>
+            <td>...</td>
             <td>...</td>
             <td>...</td>
             <td>...</td>
