--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -599,7 +599,7 @@ inputs, .input-primary {
   border-radius: 3px;
   border-color: #999;
   padding: 40px;
-  max-width: 650px;
+  max-width: 750px;
   height: auto;
   background: #fff;
   transition: all 2s;
@@ -3701,8 +3701,20 @@ input:disabled, textarea:disabled {
   font-weight: bold;
 }
 
-#form_add_curso_info #div_modulos {
+#form_add_curso_info #div_modulos, #form_add_curso_info #div_modulos_certificado {
+  display: block;
   width: 100%;
+}
+#form_add_curso_info #div_modulos label, #form_add_curso_info #div_modulos_certificado label {
+  width: 100%;
+  clear: both;
+  text-align: center;
+  background-color: #ffc;
+}
+#form_add_curso_info #div_modulos textarea, #form_add_curso_info #div_modulos_certificado textarea {
+  width: 100%;
+  max-width: 100%;
+  max-height: 130px;
 }
 #form_add_curso_info #id_curso {
   text-transform: uppercase;
@@ -3715,7 +3727,7 @@ input:disabled, textarea:disabled {
   max-width: 100%;
   min-width: 50px !important;
 }
-#form_add_curso_info #modulos {
+#form_add_curso_info #modulos, #form_add_curso_info #modulos_certificado {
   min-height: 150px;
 }
 #form_add_curso_info input[readonly=true] {
