--- a/src/components/cursosInfo/sass/_form_add_curso_info.scss
+++ b/src/components/cursosInfo/sass/_form_add_curso_info.scss
@@ -4,8 +4,12 @@
 #form_add_curso_info{
     @extend .form_flex_absolute;
 
-    #div_modulos{
+    #div_modulos, #div_modulos_certificado{
+        display: block;
         width:100%;
+        label{width:100%; clear: both; text-align: center;
+        background-color: #ffc;}
+        textarea{width:100%; max-width: 100%; max-height: 130px;}
     }
 #id_curso{
     text-transform: uppercase;
@@ -20,7 +24,7 @@
         }
     }
 
-    #modulos{ min-height: 150px;}
+    #modulos, #modulos_certificado{ min-height: 150px;}
     input[ readonly='true']{
         background: #ddd;
     }
