--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3719,11 +3719,11 @@ input:disabled, textarea:disabled {
 #form_add_curso_info #id_curso {
   text-transform: uppercase;
 }
-#form_add_curso_info #div_valor_mes, #form_add_curso_info #div_duracao, #form_add_curso_info #div_parcelas, #form_add_curso_info #div_carga_horaria, #form_add_curso_info #div_id_curso {
+#form_add_curso_info #div_valor_mes, #form_add_curso_info #div_qtd_aulas, #form_add_curso_info #div_duracao, #form_add_curso_info #div_parcelas, #form_add_curso_info #div_carga_horaria, #form_add_curso_info #div_id_curso {
   padding: 3px;
-  max-width: 33.3333%;
+  max-width: 25%;
 }
-#form_add_curso_info #div_valor_mes input, #form_add_curso_info #div_duracao input, #form_add_curso_info #div_parcelas input, #form_add_curso_info #div_carga_horaria input, #form_add_curso_info #div_id_curso input {
+#form_add_curso_info #div_valor_mes input, #form_add_curso_info #div_qtd_aulas input, #form_add_curso_info #div_duracao input, #form_add_curso_info #div_parcelas input, #form_add_curso_info #div_carga_horaria input, #form_add_curso_info #div_id_curso input {
   max-width: 100%;
   min-width: 50px !important;
 }
