--- a/src/components/cursosInfo/sass/_form_add_curso_info.scss
+++ b/src/components/cursosInfo/sass/_form_add_curso_info.scss
@@ -14,10 +14,9 @@
 #id_curso{
     text-transform: uppercase;
 }
-
-    #div_valor_mes, #div_duracao, #div_parcelas, #div_carga_horaria, #div_id_curso{
+    #div_valor_mes, #div_qtd_aulas, #div_duracao, #div_parcelas, #div_carga_horaria, #div_id_curso{
         padding:3px;
-        max-width: 33.3333%;
+        max-width: 25%;
         input{
             max-width: 100%;
             min-width: 50px !important;
