--- a/src/components/cursosInfo/viewTableCursosInfo.html
+++ b/src/components/cursosInfo/viewTableCursosInfo.html
@@ -7,7 +7,8 @@
             <th>Módulos</th>
             <th>M. Certificado</th>
             <th>Parc.</th>
-            <th>Durac.</th>
+            <th>Meses</th>
+            <th>Qtd. Aulas</th>
             <th>C. H.</th>
             <th>Valor R$</th>
 
